[package]
name = "charify"
version = "0.1.5"
edition = "2021"
author = "PROMETHIA"
description = "A simple proc macro to turn its token input into a char, similar to the built-in stringify! macro."
readme = "README.md"
repository = ""
license = "MIT"
keywords = ["proc macro", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
